--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "type": "module",
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/handlebars": "^4.0.40",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.16",
+    "@types/puppeteer": "^5.4.7",
     "apple-signin-auth": "^2.0.0",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
@@ -26,6 +28,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
@@ -33,6 +36,7 @@
     "passport": "^0.7.0",
     "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
+    "puppeteer": "^24.15.0",
     "resend": "^4.7.0",
     "sib-api-v3-sdk": "^8.5.0"
   },
