--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "deploy": "git pull && npm install && npm run build && pm2 restart sellsnap"
+    "deploy": "git pull && npm install && npm run build && pm2 restart clearvalue"
   },
   "keywords": [],
   "author": "",
