--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
     "handlebars": "^4.7.8",
+    "html-to-docx": "^1.8.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
@@ -45,6 +46,7 @@
     "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/html-to-docx": "^1.8.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.12",
     "nodemon": "^3.1.10",
