--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "sample:docx": "npm run build && node dist/scripts/generateSampleDocx.js",
+    "seed:superadmin": "npm run build && node dist/scripts/seedSuperadmin.js",
     "deploy": "git pull && npm install && npm run build && pm2 restart clearvalue-server"
   },
   "keywords": [],
