--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^24.15.0",
     "resend": "^4.7.0",
-    "sib-api-v3-sdk": "^8.5.0"
+    "sib-api-v3-sdk": "^8.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
