--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/puppeteer": "^5.4.7",
     "apple-signin-auth": "^2.0.0",
+    "archiver": "^7.0.1",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
@@ -47,6 +48,7 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.3",
     "@types/axios": "^0.9.36",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
