--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "google-auth-library": "^10.1.0",
     "handlebars": "^4.7.8",
     "html-to-docx": "^1.8.0",
+    "jimp": "^0.16.13",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
@@ -44,6 +45,7 @@
     "passport-google-oauth20": "^2.0.0",
     "puppeteer": "^24.15.0",
     "resend": "^4.7.0",
+    "sharp": "^0.34.4",
     "sib-api-v3-sdk": "^8.5.0",
     "xlsx": "^0.18.5"
   },
