--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "docx": "^9.5.1",
+    "docx-merger": "^1.2.2",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
