--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "docx": "^9.5.1",
     "docx-merger": "^1.2.2",
+    "docxtemplater": "^3.67.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
@@ -44,6 +45,7 @@
     "passport": "^0.7.0",
     "passport-apple": "^2.0.2",
     "passport-google-oauth20": "^2.0.0",
+    "pizzip": "^3.2.0",
     "puppeteer": "^24.15.0",
     "resend": "^4.7.0",
     "sharp": "^0.34.4",
