--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@scholarcy/docx-merger": "^0.3.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/handlebars": "^4.0.40",
     "@types/jsonwebtoken": "^9.0.10",
@@ -32,12 +33,13 @@
     "cors": "^2.8.5",
     "docx": "^9.5.1",
     "docx-merger": "^1.2.2",
+    "docx-templates": "^4.14.1",
     "docxtemplater": "^3.67.1",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
     "handlebars": "^4.7.8",
-    "jimp": "^0.16.13",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
